fixed font spacing

--- a/styles/sass/partials/_fonts.scss
+++ b/styles/sass/partials/_fonts.scss
@@ -23,6 +23,7 @@ h2,h3{
 h2 {
         
         font-size:4.5rem;
+        margin: 0;
     }
 
 h3 {
