--- a/styles/styles.css
+++ b/styles/styles.css
@@ -272,6 +272,7 @@ h2, h3 {
 
 h2 {
   font-size: 4.5rem;
+  margin: 0;
 }
 
 h3 {
